cluster/base/flux-system/weave-gitops-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ww-gitops-weave-gitops
  namespace: flux-system
spec:
  ports:
  - name: http
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: ww-gitops-weave-gitops
  type: ClusterIP
