cluster/base/flux-system/weave-gitops-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: source-branch-sync
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: ww-gitops-weave-gitops
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: $(SECRET_WEAVE_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  number: 9001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - $(SECRET_WEAVE_DOMAIN)
      secretName: ww-gitops-weave-gitops-tls
